--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: Nova-Kernels/kernel_xiaomi_mt6785
-        ref: main
+        ref: derp
 
     - name: Set up custom compiler
       run: |
