--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: Nova-Kernels/kernel_xiaomi_mt6785
-        ref: derp
+        ref: main
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up custom compiler
       run: |
