Update and rename blank.yml to compile.yml

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         repository: HarshitX97/kernel_xiaomi_mt6785ER
         ref: main
-        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
 
     - name: Set up custom compiler
       run: |
