--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: HarshitX97/kernel_xiaomi_mt6785ER
-        ref: main
+        ref: derp
         fetch-depth: 0
 
     - name: Set up custom compiler
